--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,70 @@
-{% extends 'base.html' %} {% block style %} {% endblock %} {% block body%}
-<h1>Login</h1>
-<form action="" method="POST">
-  {{ form.hidden_tag() }} {% if form.ID.errors %} {% for error in form.ID.errors
-  %}
-  <div style="color: red">{{error}}</div>
-  {% endfor %} {% endif %} {% if form.password.errors %} {% for error in
-  form.password.errors %}
-  <div style="color: red">{{error}}</div>
-  {% endfor %} {% endif %} {{form.ID.label}}:
-  {{form.ID(placeholder="username")}} <br />
-  {{form.password.label}}: {{form.password()}} <br />
-  {{form.submit}}<br />
+{% extends 'base.html' %} 
+{% block style %}
+<style>
+  .error-color{
+    color: red;
+  }
+  .error-message {  
+    word-wrap: break-word; 
+    max-width: 340px;
+    font-size: small;
+  } 
+  .form-container {
+    margin: 20px;
+    max-width: 1000px;
+  }
+  .all-heading {
+    margin-left: 15px;
+    margin-top: 20px;
+  }
+  .form-button {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    background-color: #333e48;
+    color: #ffffff;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+    width: 300px;
+  }
+  .input-width {
+    width: 300px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+  .form-button:hover {
+    background-color: #0076be;
+    color: #ffffff;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+</style> 
+{% endblock %} 
+{% block body%}
+<h1 class="all-heading">Login</h1>
+<form class="form-container" action="" method="POST">
+  {{ form.hidden_tag() }} 
+  {% if form.ID.errors %} 
+  {% for error in form.ID.errors %}
+    <div class="error-message error-color">{{error}}</div>
+  {% endfor %} 
+  {% endif %} 
+  {% if form.password.errors %} 
+  {% for error in form.password.errors %}
+    <div class="error-message error-color">{{error}}</div>
+  {% endfor %} 
+  {% endif %} 
+  
+  <div class="form-group">
+    {{form.ID.label}}:
+    <br />
+    {{form.ID(class='input-width', placeholder="")}} 
+  </div>
+  <div class="form-group">
+    {{form.password.label}}: 
+    <br />
+    {{form.password(class='input-width')}} 
+  </div>
+  {{form.submit(class='btn form-button')}}
 </form>
 {% endblock %}
