--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,88 +1,117 @@
 {% extends 'base.html' %} 
 {% block style %} 
 <style>
+  .all-heading {
+    margin-left: 15px;
+    margin-top: 20px;
+  }
+  .error-color{
+    color: red;
+  }
   .error-message {  
     word-wrap: break-word; 
-    color: red; 
     max-width: 340px;
     font-size: small;
   } 
+  .input-width {
+    width: 300px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+  .form-container {
+    margin: 20px;
+    max-width: 1000px;
+  }
+  .form-button {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    background-color: #333e48;
+    color: #ffffff;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+    width: 300px;
+  }
+  .form-button:hover {
+    background-color: #0076be;
+    color: #ffffff;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
 </style>
 {% endblock %} 
 {% block body%}
-<h1>Registration</h1>
-<form action="" method="POST">
+<h1 class="all-heading">Registration</h1>
+<form class="form-container" action="" method="POST">
   <!-- hidden input field -->
   {{form.hidden_tag()}} 
-  
-
-  
   <!-- actual register -->
   <div class="form-group">
-    {{form.user_id.label}}: <br />
-    {{form.user_id(placeholder="")}} 
+    {% if form.user_id.errors %}{{form.user_id.label(class='error-color')}} {% else %} {{form.user_id.label}}{% endif %}:<br />
+    {{form.user_id(class='input-width', placeholder="")}} 
     <br />
     {% if form.user_id.errors %} 
     {% for error in form.user_id.errors %}
-      <div class="error-message">{{error}}</div>
+      <div class="error-message error-color">{{error}}</div>
     {% endfor %} 
     {% endif %} 
   </div>
   <div class="form-group">
-    {{form.name.label}}: <br />
-    {{form.name(placeholder="")}} 
+    {% if form.name.errors %}{{form.name.label(class='error-color')}} {% else %} {{form.name.label}}{% endif %}:
+    <br />
+    {{form.name(class='input-width', placeholder="")}} 
     <br />
     {% if form.name.errors %} 
     {% for error in form.name.errors %}
-      <div class="error-message">{{error}}</div>
+      <div class="error-message error-color">{{error}}</div>
     {% endfor %} 
     {% endif %} 
   </div>
   <div class="form-group">
-    {{form.surname.label}}: 
+    {% if form.surname.errors %}{{form.surname.label(class='error-color')}} {% else %} {{form.surname.label}}{% endif %}: 
     <br />
-    {{form.surname(placeholder="")}} 
+    {{form.surname(class='input-width', placeholder="")}} 
     <br />
     {% if form.surname.errors %} 
     {% for error in form.surname.errors %}
-      <div class="error-message">{{error}}</div>
+      <div class="error-message error-color">{{error}}</div>
     {% endfor %} 
     {% endif %} 
 
   </div>
   <div class="form-group">
-    {{form.email.label}}: 
+    {% if form.email.errors %}{{form.email.label(class='error-color')}} {% else %} {{form.email.label}}{% endif %}:  
     <br />
-    {{form.email(placeholder="")}} 
+    {{form.email(class='input-width', placeholder="")}} 
     <br />
     {% if form.email.errors %} 
     {% for error in form.email.errors %}
-      <div class="error-message">{{error}}</div>
+      <div class="error-message error-color">{{error}}</div>
     {% endfor %} 
     {% endif %} 
   </div>
   <div class="form-group">
-    {{form.cell_no.label}}: 
+    {% if form.cell_no.errors %}{{form.cell_no.label(class='error-color')}} {% else %} {{form.cell_no.label}}{% endif %}:   
     <br />
-    {{form.cell_no(placeholder="")}} 
+    {{form.cell_no(class='input-width', placeholder="")}} 
     <br />
     {% if form.cell_no.errors %} 
     {% for error in form.cell_no.errors %}
-      <div class="error-message">{{error}}</div>
+      <div class="error-message error-color">{{error}}</div>
     {% endfor %} 
     {% endif %} 
   </div>
   <div class="form-group">
-    {{form.password.label}}: 
+    {% if form.password.errors %}{{form.password.label(class='error-color')}} {% else %} {{form.password.label}}{% endif %}:
     <br />
-    {{form.password()}} 
+    {{form.password(class='input-width')}} 
     <br />
     {% if form.password.errors %} 
     {% for error in form.password.errors %}
-      <div class="error-message">{{error}}</div>
+      <div class="error-message error-color">{{error}}</div>
     {% endfor %} 
     {% endif %} 
   </div>
-  {{form.submit}}<br />
+  {{form.submit(class='btn form-button')}}<br />
 </form>
 {% endblock %}
