--- a/templates/account.html
+++ b/templates/account.html
@@ -33,6 +33,9 @@
 >
   Update password
 </button>
+<form action="{{url_for('account.logout')}}" method="POST">
+  <button class="btn button">Log Out</button>
+</form>
 
 <!-- Email Model -->
 <div
