--- a/templates/new-claim.html
+++ b/templates/new-claim.html
@@ -4,6 +4,14 @@
     margin-left: 15px;
     margin-top: 20px;
   }
+  .error-color{
+    color: red;
+  }
+  .error-message {  
+    word-wrap: break-word; 
+    max-width: 340px;
+    font-size: small;
+  } 
   .claim-input {
     width: 300px;
     margin-right: 10px;
@@ -86,14 +94,30 @@
         {{form.date_incident_occurred.label()}}
         <br />
         {{form.date_incident_occurred(class='claim-input')}}
+        <br />
+        {% if form.date_incident_occurred.errors %} 
+        {% for error in form.date_incident_occurred.errors %}
+          <div class="error-message error-color">{{error}}</div>
+        {% endfor %} 
+        {% endif %} 
       </div>
       <div class="form-group">
         {{form.claim_description.label}} <br />
         {{form.claim_description(class='claim-input claim-description-input')}}
+        {% if form.claim_description.errors %} 
+        {% for error in form.claim_description.errors %}
+          <div class="error-message error-color">{{error}}</div>
+        {% endfor %} 
+        {% endif %} 
       </div>
       <div>
         {{form.police_claim_number.label}}<br />
         {{form.police_claim_number(class='claim-input')}}
+        {% if form.police_claim_number.errors %} 
+        {% for error in form.police_claim_number.errors %}
+          <div class="error-message error-color">{{error}}</div>
+        {% endfor %} 
+        {% endif %} 
       </div>
       {{form.submit(class="btn form-button")}}
     </div>
