--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
     {% block style %} {% endblock %}
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg nav">
+    <nav class="navbar fixed-top navbar-expand-lg nav">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Platinum Plus</a>
         <button
