--- a/templates/account.html
+++ b/templates/account.html
@@ -1,13 +1,41 @@
 {% extends 'base.html' %} {% block style %}
 <style>
-  .button {
+  .Account-heading {
+    
+    margin-left: 15px;
+    margin-top: 20px;
+  }
+  .popup-heading,.Account-heading{
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+
+  }
+  .button,.logout-button {
     margin: 10px;
     background: #333e48;
     color: #ffffff;
+   
   }
-  .button:hover {
+  .center {
+    margin-left: 15px;
+    margin-right: 15px;
+    width:100%;
+    padding: 10px;
+    padding-left: 30px;
+  }
+  .Account-form{
+    display: flex;
+  }
+  .button{
+    width: 200px;
+  }
+  .button:hover,.logout-button:hover {
     background-color: #0076be;
     color: #ffffff;
+  }
+  .logout-button{
+    margin-right: auto;
+    margin-left: auto;
   }
   .error-color{
     color: red;
@@ -16,33 +44,109 @@
     word-wrap: break-word; 
     max-width: 340px;
     font-size: small;
+  }
+  .account-icon-container{
+    margin: 10px;
   } 
+  .account-icon{
+    margin: 80px;
+    margin-left: 50px;
+    margin-right: 0%;
+    font-size: 140px;
+  }
+  .popup-model-header{
+    background-color: #0076be;
+  }
+  .popup-button{
+    margin: 0px;
+  }
+  .Content-title{
+    font-weight: bold;
+  }
+  .account-button-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .account-details{
+    display: grid;
+    grid-template-columns: 1fr;
+    max-width: 500px;
+    margin: 10px;
+  }
+  @media (min-width: 531px) {
+    .account-icon{
+      margin-left: 50px;
+    padding-left: 35px ;
+    }
+    .center{
+      margin: auto;
+      width: 70%;
+    }
+    .account-details{
+      grid-template-columns: 1fr 1fr;
+      gap: 5px;
+  }
+  @media (min-width: 768px) {
+    .account-icon{
+      margin-left: 90px;
+    padding-left: 35px ;
+    }
+    .center{
+      display: flex;
+      flex-direction: column;
+      justify-items: center;
+      width: 500px;
+    }
+    .account-details{
+      grid-template-columns: 1fr 1fr;
+      gap: 5px;
+  }
+  .Account-heading {
+    margin-left: 15px;
+    margin-top: 30px;
+  }
+  }
+}
 </style>
 {% endblock %} {% block body%}
-<h1>Account</h1>
-<p>ID Number: {{user.ID}}</p>
-<p>Full name: {{user.name}} {{user.surname}}</p>
-<p>Email: {{user.email}}</p>
-<p>Cell Number: {{user.cell_no}}</p>
-<button class="btn button" data-bs-toggle="modal" data-bs-target="#EmailModal">
-  Update Email
-</button>
-<button
-  class="btn button"
-  data-bs-toggle="modal"
-  data-bs-target="#ContactModal"
->
-  Update Contact Number
-</button>
-<button
-  class="btn button"
-  data-bs-toggle="modal"
-  data-bs-target="#PasswordModal"
->
-  Update password
-</button>
-<form action="{{url_for('account.logout')}}" method="POST">
-  <button class="btn button">Log Out</button>
+<h1 class="Account-heading">Account</h1>
+<div class="card center">
+  <p class="account-icon-container">
+  <i class=" fa-solid fa-circle-user fa-xl account-icon"></i>
+  </p>
+  <div class="account-details">
+    <p class="Content-title">ID Number:</p>
+    <p>{{user.ID}}</p> 
+    <p class="Content-title">Full name: </p>
+    <p>{{user.name}} {{user.surname}}</p>
+    <p class="Content-title">Email:</p>
+    <p>{{user.email}}</p>
+    <p class="Content-title">Cell Number:</p>
+    <p>{{user.cell_no}}</p>
+  </div>
+</div>
+<div class="account-button-container">
+  <button class="btn button" data-bs-toggle="modal" data-bs-target="#EmailModal">
+    Update Email
+  </button>
+  <button
+    class="btn button"
+    data-bs-toggle="modal"
+    data-bs-target="#ContactModal"
+  >
+    Update Contact Number
+  </button>
+  <button
+    class="btn button"
+    data-bs-toggle="modal"
+    data-bs-target="#PasswordModal"
+  >
+    Update password
+  </button>
+</div>
+<form class="Account-form" action="{{url_for('account.logout')}}" method="POST">
+  <button class="btn logout-button">Log Out</button>
 </form>
 
 <!-- Email Model -->
@@ -55,8 +159,8 @@
 >
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="EmailModalLabel">Change Email</h1>
+      <div class="modal-header popup-model-header">
+        <h1 class="modal-title fs-5 popup-heading" id="EmailModalLabel">Change Email</h1>
         <button
           type="button"
           class="btn-close"
@@ -81,7 +185,7 @@
           </div>
         </div>
 
-        <div class="modal-footer">{{email_form.submit()}}</div>
+        <div class="modal-footer">{{email_form.submit(class='btn button popup-button')}}</div>
       </form>
     </div>
   </div>
@@ -97,8 +201,8 @@
 >
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="ContactModalLabel">
+      <div class="modal-header popup-model-header">
+        <h1 class="modal-title fs-5 popup-heading" id="ContactModalLabel">
           Change Contact Number
         </h1>
         <button
@@ -124,7 +228,7 @@
           </div>
         </div>
 
-        <div class="modal-footer">{{contact_form.submit()}}</div>
+        <div class="modal-footer">{{contact_form.submit(class='btn button popup-button')}}</div>
       </form>
     </div>
   </div>
@@ -140,8 +244,8 @@
 >
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="PasswordModalLabel">
+      <div class="modal-header popup-model-header">
+        <h1 class="modal-title fs-5 popup-heading" id="PasswordModalLabel">
           Change Password
         </h1>
         <button
@@ -180,7 +284,7 @@
           </div>
         </div>
 
-        <div class="modal-footer">{{password_form.submit()}}</div>
+        <div class="modal-footer">{{password_form.submit(class='btn button popup-button')}}</div>
       </form>
     </div>
   </div>
