--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,900&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -20,7 +23,7 @@
     <style>
       body {
         margin: 0;
-        font-family: Arial, sans-serif;
+        font-family: "Roboto",Arial, sans-serif;
       }
       .logo {
         max-width: 100px;
@@ -35,6 +38,7 @@
 
       .nav {
         background-color: #0076be;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
       }
       .nav-account,
       .nav-right-item {
@@ -45,7 +49,10 @@
       .nav-account:hover {
         color: #111820;
       }
-
+      .empty-nav{
+        height: 55px;
+        width: 100%;
+      }
       .flash-container {
         font-family: sans-serif;
         font-weight: bold;
@@ -143,40 +150,38 @@
           <a
             class="btn btn-success my-2 my-sm-0 nav-right-item"
             href="/registration"
-            {%
-            if
-            lg_user
-            %}
-            hidden{%
-            endif
-            %}
+            {% if lg_user %}
+            hidden
+            {% endif %}
           >
             Register
           </a>
           <a
             class="btn btn-success my-2 my-sm-0 nav-right-item"
             href="/login"
-            {%
-            if
-            lg_user
-            %}
-            hidden{%
-            endif
-            %}
+            {% if lg_user %}
+            hidden
+            {% endif %}
           >
             Login
           </a>
         </div>
       </div>
     </nav>
+    <div class="empty-nav">
+
+    </div>
 
     <div class="flash-container">
-      {% with messages = get_flashed_messages() %} {% if messages %} {% for
-      message in messages %}
+      {% with messages = get_flashed_messages() %} 
+      {% if messages %} 
+      {% for message in messages %}
       <div class="flashes alert alert-info" role="alert">
         <p class="flash-message">{{ message }}</p>
       </div>
-      {% endfor %} {% endif %} {% endwith %}
+      {% endfor %} 
+      {% endif %} 
+      {% endwith %}
     </div>
 
     {% block body %} {% endblock %}
