--- a/templates/new-claim.html
+++ b/templates/new-claim.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %} {% block style %}
 <style>
   .all-heading {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
     margin-left: 15px;
     margin-top: 20px;
   }
