--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,8 @@
     max-width: 1000px;
   }
   .all-heading {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
     margin-left: 15px;
     margin-top: 20px;
   }
