--- a/static/style.css
+++ b/static/style.css
@@ -111,18 +111,63 @@ body {
     margin-left: auto;
     margin-right: auto;
   }
-  .quote-form-container {
+  /* Login */
+  .login-sign-up-form-container {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
   }
+  /*Claim*/
+  .claim-input {
+    width: 300px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+  .claim-description-input {
+    height: 100px;
+  }
+  .claim-form-input-items {
+    width: 80%;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .form-top-label {
+    margin-top: 20px;
+  }
+  .claim-form-container {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+
+
+
+  @media (min-width: 515px) {
+    .claim-input {
+      width: 440px;
+    }
+  }
   @media (min-width: 768px) {
-    .quote-form-container {
+    .login-sign-up-form-container {
       width: 92%;
     }
   }
   @media (min-width: 768px) {
-    .quote-form-container {
+    .login-sign-up-form-container {
       width: 60%;
+    }
+    .claim-form-container {
+        width: 90%;
+      }
+      .claim-form-input-items {
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+      }
+  }
+  @media (min-width: 1024px) {
+    .claim-form-container {
+      width: 70%;
     }
   }
