--- a/templates/new-claim.html
+++ b/templates/new-claim.html
@@ -1,83 +1,6 @@
 {% extends 'base.html' %} {% block style %}
-<style>
-  .all-heading {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    margin-left: 15px;
-    margin-top: 20px;
-  }
-  .error-color{
-    color: red;
-  }
-  .error-message {  
-    word-wrap: break-word; 
-    max-width: 340px;
-    font-size: small;
-  } 
-  .claim-input {
-    width: 300px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-  }
-  .claim-description-input {
-    height: 100px;
-  }
-  .form-container {
-    margin: 20px;
-    max-width: 1000px;
-  }
-  .quote-form-container {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .claim-form-input-items {
-    width: 80%;
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-  .form-top-label {
-    margin-top: 20px;
-  }
-  .form-button {
-    margin-top: 10px;
-    margin-bottom: 20px;
-    background-color: #333e48;
-    color: #ffffff;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-
-    width: 300px;
-  }
-  .form-button:hover {
-    background-color: #0076be;
-    color: #ffffff;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  }
-  @media (min-width: 515px) {
-    .claim-input {
-      width: 440px;
-    }
-  }
-  @media (min-width: 768px) {
-    .quote-form-container {
-      width: 90%;
-    }
-    .claim-form-input-items {
-      width: 50%;
-      margin-left: auto;
-      margin-right: auto;
-    }
-  }
-  @media (min-width: 1024px) {
-    .quote-form-container {
-      width: 70%;
-    }
-  }
-</style>
 {% endblock %} {% block body%}
-<div class="quote-form-container">
+<div class="claim-form-container">
   <h1 class="all-heading">New Claim</h1>
   <form class="card form-container" action="" method="POST">
     <div class="claim-form-input-items">
