--- a/static/style.css
+++ b/static/style.css
@@ -140,6 +140,32 @@ body {
     margin-right: auto;
   }
 
+  /* quote */
+  .quote-error-message {  
+    word-wrap: break-word; 
+    max-width: 200px;
+    font-size: small;
+  } 
+  .quote-form-container {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .form-input-items {
+    max-width: 1000px;
+    margin: auto;
+    width: 80%;
+    padding: 10px;
+    display: grid;
+    gap: 10px;
+    column-gap: 20px;
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+  .quote-input-width {
+    width: 200px;
+    height: 30px;
+  }
 
 
 
@@ -164,6 +190,23 @@ body {
         width: 50%;
         margin-left: auto;
         margin-right: auto;
+      }
+      .quote-form-container {
+        width: 92%;
+      }
+      .form-input-items {
+        max-width: 1000px;
+        margin: auto;
+        width: 90%;
+        padding: 10px;
+        display: grid;
+        gap: 10px;
+        column-gap: 20px;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+      }
+      .quote-form-container {
+        width: 60%;
       }
   }
   @media (min-width: 1024px) {
