--- a/static/style.css
+++ b/static/style.css
@@ -166,6 +166,52 @@ body {
     width: 200px;
     height: 30px;
   }
+  /* Dashboard */
+  .dashboard-heading {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    color: #111820;
+  }
+  .dashboard-card {
+    margin-top: 30px;
+    padding: 10px;
+    display: block;
+    width: 90%;
+    min-width: 300px;
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  }
+  .dashboard-buttons-group {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-around;
+    justify-items: center;
+  }
+  .dashboard-button {
+    width: 100px;
+    height: 80px;
+    background-color: #333e48;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 7%;
+    margin: 5px;
+  }
+  .dashboard-button:hover {
+    background-color: #0076be;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+  .dashboard-button-item {
+    text-decoration: none;
+    text-align: center;
+    color: #ffffff;
+    margin: 2px;
+  }
+  .dashboard-button-text {
+    margin: 0px;
+  }
 
 
 
@@ -207,6 +253,15 @@ body {
       }
       .quote-form-container {
         width: 60%;
+      }
+
+      .dashboard-card {
+        width: 80%;
+      }
+      .dashboard-buttons-group {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
       }
   }
   @media (min-width: 1024px) {
