--- a/static/style.css
+++ b/static/style.css
@@ -213,6 +213,35 @@ body {
     margin: 0px;
   }
 
+  /* All policies */
+  .all-category-heading {
+    margin-left: 15px;
+  }
+
+  .all-items-container {
+    padding: 10px;
+    margin: 17px;
+  }
+  .policy-container {
+    background-color: #333e48;
+    color: #ffffff;
+  }
+  .all-button-active {
+    max-width: 150px;
+    background-color: #111820;
+    color: #ffffff;
+  }
+  .all-button {
+    max-width: 150px;
+    background-color: #333e48;
+    color: #ffffff;
+  }
+  .all-button:hover,
+  .all-button-active:hover {
+    background-color: #0076be;
+    color: #ffffff;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
 
 
   @media (min-width: 515px) {
