--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="../static/favicon.ico"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block docName %} {% endblock %}</title>
@@ -132,16 +137,6 @@
     </div>
 
     {% block body %} {% endblock %}
-
-    <!-- <footer>
-      <p>Copyright © 2024</p>
-      <p>
-        Sanlam Limited is the licensed controlling company of the Sanlam Limited
-        Insurance Group. Sanlam Life Insurance Limited is an insurer licensed to
-        conduct life insurance business and is a licensed financial services
-        provider and a registered credit provider.
-      </p>
-    </footer> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
