--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,13 @@ body {
 .logo {
   max-width: 100px;
   max-height: 40px;
+  padding-bottom: 8px;
+}
+.logo-container {
+  background-color: #ffffff;
+  padding: 3px 10px;
+  border-radius: 10px;
+  font-weight: bold;
 }
 .nav-tag {
   color: #ffffff;
