--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,11 @@
   <body>
     <nav class="navbar fixed-top navbar-expand-lg nav">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Platinum Plus</a>
+        <a class="navbar-brand" href="/">
+          <div class="logo-container">
+            <img class="logo" src="../static/logo.svg" /> Platinum Plus
+          </div>
+        </a>
         <button
           class="navbar-toggler"
           type="button"
